css/math.css
* {
	margin: 0;
	padding: 0;
}

body {
	font-family: "Microsoft Yahei", Kaiti, Songti, serif, sans-serif;
	font-size: 0.87em;
	margin: 5%;
	background: #eeee99; /* yellow */
	overflow: auto;
	-webkit-overflow-scrolling: touch;
}

a:link {
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

h1 {
	text-align: center;
	font-weight: bold;
	font-size: 2em;
	margin: 3.6em 0 1.8em 0;
}

h2 {
	font-weight: bold;
	font-size: 1.5em;
	margin: 2.4em 0 1.2em 0;
}

h3 {
	font-weight: bold;
	font-size: 1.2em;
	margin: 1.8em 0 0.9em 0;
}

h4 {
	font-weight: bold;
	font-size: 1em;
	margin: 1.8em 0 0.9em 0;
}

p {
	margin: 0.8em 0;
}

pre {
	font-size: 0.85em;
	tab-size: 4;
	-moz-tab-size: 4;
	-o-tab-size: 4;
}

math {
	font-family: "Latin Modern Math";
	font-size: 1.2em;
}

.formula {
	display: table;
	width: 100%;
	text-align: center;
	line-height: 2em;
	margin: 1em 0;
}

.center {
	text-align: center;
}

.remark {
	padding: 0.5em;
	border-radius: 0.5em;
	background: rgba(0,0,0,0.2);
}

.proof, .solution, .answer {
	padding: 0.5em;
	border-radius: 0 0.5em 0.5em 0.5em;
	background: rgba(0,0,0,0.2);
	margin-top: 0;
}

button.toggle-show-answer {
	font-size: 1em;
	padding: 0.2em 0.4em;
	border-radius: 0.5em;
	border: none;
	font-weight: bold;
	color: black;
	background: rgba(0, 0, 0, 0.2);
	margin-bottom: 0;
}

button.toggle-show-answer:hover {
	cursor: pointer;
}

div.graph {
	height: 25em;
	text-align: center;
	font-size: 0.9em;
}

div.graph img {
	height: 90%;
	display: block;
	margin: 0 auto;
}

div.graph span {
	float: bottom;
}

span.box {
	display: inline-block;
	padding: 0.5em;
	border-radius: 0.5em;
	background: rgba(0,0,0,0.2);
}

/* use this to number your formula */
span.label {
	position: absolute;
	padding-right: 0.3em;
	right: 5%;
}

span.right {
	float: right;
}

span.transparent {
	color: rgba(0, 0, 0, 0);
}

ol, ul {
	margin: 0.8em 0;
}

ol li, ul li {
	margin: 0.3em 1.5em;
}

ol ol li {
	margin: 0.3em 1em;
}

/*
ol.enum ol li {
	display: inline-block;
}
*/

/* ol style (1) (2) (3)... */
ol.enum ol {
	list-style-type: none;
	counter-reset: enum_cnt;
}

ol.enum ol > li {
	counter-increment: enum_cnt;
}

ol.enum ol > li:before {
	content: "(" counter(enum_cnt) ") ";
}

/* ol style i ii iii */
ol.subenum ol {
	counter-reset: subenum_cnt;
}

ol.subenum ol > li {
	counter-increment: subenum_cnt;
}

ol.subenum ol > li:before {
	content: "(" counter(subenum_cnt, lower-roman) ") ";
}

/* multi-columns */
.col2 li,.col2 div {
	width: 45%;
	display: inline-block;
}

.col3 li,.col3 div {
	width: 30%;
	display: inline-block;
}

.col4 li,.col4 div {
	width: 21%;
	display: inline-block;
}

.col5 li,.col5 div {
	width: 16%;
	display: inline-block;
}

table {
	margin: 2em auto;
	border-top: 2px solid;
	border-bottom: 2px solid;
}

td, th {
	padding: 0.45em 0.75em 0.45em 0.75em;
}

/*
#nav {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 36px;
	text-align: center;
	background: rgba(0,0,0,0.2);
}

#nav a {
	margin: 0 15px;
	line-height: 36px;
	font-size: 28px;
	font-weight: bold;
	color: white;
	cursor: pointer;
}

#toc {
	position: fixed;
	top: 0;
	left: 0;
	width: 300px;
	height: 100%;
	border: none;
	box-shadow: 0 0 10px 0.2rem black;
}
*/

/* on printer... */
@media print {
	body {
		margin: 0;
		font-size: 10pt;
		font-family: SimSun, Songti, STIXGeneral, times, serif;
		background: white;
	}

	h1, h2, h3, h4, h5, h6, b {
		font-family: "AR PL UMing CN Bold", "Microsoft YaHei", serif;
		font-weight: bold;
	}

	a {
		color: black;
	}

	/*.remark {
		font-family: fang-song, Kaiti;
	}  open A10 and you got a problem...*/

	/*
	#nav {
		display: none;
	}
	*/

	.toggle-show-answer {
		display: none;
	}

	.pagebreak {
		page-break-after: always;
	}
}

/* on your mobile phone... */
@media screen and (min-resolution: 150dpi) {
	/*
	#nav {
		height: 64px;
	}

	#nav a {
		line-height: 64px;
		font-size: 52px;
	}

	#toc {
		width: 600px;
	}
	*/

	body {
		font-size: 0.8em;
		background: #eeeedd; /* lighter yellow */
	}

	math {
		font-size: 1em;
	}

	div.graph {
		height: 15em;
	}
}

.MathJax {
	display: inline-block !important;
	/* enable auto linebreak for span.formula */
}

